# kit-old

./: .gitignore  Cargo.toml  kit.example.toml  kit.toml  readme.md
docker/: Dockerfile.kernel
example/: Dockerfile.core  Dockerfile.coreutils  Dockerfile.vsh
src/: main.rs
