[package]
name = "kit"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.53"
clap = "3.0.14"
tar = "0.4.38"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
tokio = { version = "1.16.1", features = ["full"] }
tempfile = "3.3.0"
log = "0.4.14"
env_logger = "0.9.0"
hashbrown = { version = "0.12.0", features = ["serde"] }
